# glpi-notifier-rs

./: .env.template  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: health.ps1  install.ps1  release.ps1  uninstall.ps1
src/: glpi.rs  main.rs  state.rs
