[package]
name = "glpi-notifier-rs"
version = "0.2.0"
edition = "2021"
description = "Small GLPI ticket notifier for Windows (toasts via SnoreToast)."
license = "MIT"
repository = "https://github.com/yourname/glpi-notifier-rs"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
dirs = "5"
base64 = "0.22"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
